# editiles

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Readme.md  run.sh
extra/: FileUtilTests.cpp
extra/python/: BaseLayer.py  FileUtil.py  GridLayer.py  Instance.py  InstanceLayer.py  Level.py  ObjectTemplate.py  ParseUtil.py  TemplateProperty.py  pyexemple.py
src/: Application.cpp  Application.h  CLI.cpp  CLI.h  DragObjectIDs.h  Editor.cpp  Editor.h  EditorTabsHandler.cpp  EditorTabsHandler.h  GridLayer.cpp  GridLayer.h  Level.cpp  Level.h  ParseFunctions.cpp  ParseFunctions.h  Zoom.cpp  Zoom.h  main.cpp
src/FileUtil/: FileUtil.cpp  FileUtil.h  PathUtil.cpp  PathUtil.h
src/GUI/: BorderlessWindow.cpp  BorderlessWindow.h  BottomBar.cpp  BottomBar.h  MainWindow.cpp  MainWindow.h  Window.cpp  Window.h  WindowCorner.cpp  WindowCorner.h  WindowManager.cpp  WindowManager.h
src/GUI/Mouse/: DragAndDropObject.h  MouseObject.cpp  MouseObject.h
src/GUI/Widget/: Button.cpp  Button.h  CppStringField.cpp  CppStringField.h  CppStringValue.cpp  CppStringValue.h  ElementList.cpp  ElementList.h  IntField.cpp  IntField.h  IntValue.cpp  IntValue.h  Label.cpp  Label.h  Widget.cpp  Widget.h  WidgetManager.cpp  WidgetManager.h
src/Layer/: GridLayer.cpp  GridLayer.h  Instance.cpp  Instance.h  InstanceLayer.cpp  InstanceLayer.h  Layer.cpp  Layer.h  LayerIDs.h
src/Mouse/: DragAndDropObject.cpp
src/ObjectManager/: ObjectManager.cpp  ObjectManager.h  ObjectProperty.cpp  ObjectProperty.h  ObjectTemplate.cpp  ObjectTemplate.h
src/TextureManager/: TextureManager.cpp  TextureManager.h  TextureObject.cpp  TextureObject.h
src/Widget/: ImageFileReceiver.cpp  ImageFileReceiver.h  InstancePropertiesList.cpp  InstancePropertiesList.h  LayerList.cpp  LayerList.h  ObjectList.cpp  ObjectList.h  ObjectPropertiesList.cpp  ObjectPropertiesList.h  Palette.cpp  Palette.h  TextureList.cpp  TextureList.h  TexturePreview.cpp  TexturePreview.h  Texturepreview.cpp  instancePropertiesList.cpp
src/Windows/: LayerInfoWindow.cpp  LayerInfoWindow.h  LayerListWindow.cpp  LayerListWindow.h  NewLevelWindow.cpp  NewLevelWindow.h  NewTextureWindow.cpp  NewTextureWindow.h  PaletteWindow.cpp  PaletteWindow.h  SaveWindow.cpp  SaveWindow.h  TextureInfoWindow.cpp  TextureInfoWindow.h  TextureListWindow.cpp  TextureListWindow.h  TexturePreviewWindow.h  WinIDs.h  ZoomWindow.cpp  ZoomWindow.h
src/Windows/Instance/: ChangeInstancePropWindow.cpp  ChangeInstancePropWindow.h  InstanceInfoWindow.cpp  InstanceInfoWindow.h
src/Windows/Layer/: LayerInfoWindow.cpp  LayerInfoWindow.h  LayerListWindow.cpp  LayerListWindow.h
src/Windows/Object/: ChangePropertyWindow.cpp  ChangePropertyWindow.h  NewObjectWindow.cpp  NewObjectWindow.h  NewPropertyWindow.cpp  NewPropertyWindow.h  ObjectInfoWindow.cpp  ObjectInfoWindow.h  ObjectListWindow.cpp  ObjectListWindow.h  RenameObjectWindow.cpp  RenameObjectWindow.h  (+2 more)
(+6 files in other folders)
